// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value: assets 1`] = `
Array [
  Array [
    "1.async.js.gz?ver=1ea6f97e389bd951fd50",
    117,
  ],
  Array [
    "1.async.js?ver=1ea6f97e389bd951fd50",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "js.js.gz?var=1ea6f97e389bd951fd50",
    2773,
  ],
  Array [
    "js.js?var=1ea6f97e389bd951fd50",
    10201,
  ],
]
`;

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value: errors 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value: warnings 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values: assets 1`] = `
Array [
  Array [
    "1.async.js.gz?ver=1ea6f97e389bd951fd50",
    117,
  ],
  Array [
    "1.async.js?ver=1ea6f97e389bd951fd50",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "js.js.gz?var=1ea6f97e389bd951fd50",
    2773,
  ],
  Array [
    "js.js?var=1ea6f97e389bd951fd50",
    10201,
  ],
]
`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values: errors 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values: warnings 1`] = `Array []`;
